--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>РИС</title>
+    <title>РИАС</title>
     <script type="text/javaScript" src="https://www.gstatic.com/charts/loader.js"></script>
   </head>
   <body>
