--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Речные информационные службы РБ"
     />
     <title>РИС</title>
     <script type="text/javaScript" src="https://www.gstatic.com/charts/loader.js"></script>
